# vrcreader

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vrc.cpp  vrc.h  vrcplayer.cpp  vrcreader.cpp  vrcreader.h  vrcreader.pro
include/: mainwindow.h  vrcplayer.h  vrcreader.h
python/: vrc_reader.py
src/: main.cpp  mainwindow.cpp  mainwindow.ui  vrcplayer.cpp  vrcreader.cpp
